Remove unused IPO detail table dependencies